# rust_tracing_starter

./: Cargo.toml  README.md
.github/workflows/: validate.yml
examples/: basic.rs  duct.rs
src/: lib.rs
