[package]
name = "rust_tracing_starter"
version = "0.1.0"
edition = "2021"

[dependencies]
indicatif = { version = "0.17.8", optional = true }
opentelemetry = { version = "0.22.0", optional = true }
opentelemetry-otlp = { version = "0.15.0", features = ["reqwest-blocking-client", "http-proto"], optional = true }
opentelemetry_sdk = { version = "0.22.1", optional = true }
tracing = "0.1.40"
tracing-indicatif = { version = "0.3.6", optional = true }
tracing-opentelemetry = { version = "0.23.0", optional = true }
tracing-subscriber = "0.3.18"

[features]
indicatif = ["dep:indicatif", "dep:tracing-indicatif"]
opentelemetry = ["dep:opentelemetry", "dep:opentelemetry-otlp", "dep:opentelemetry_sdk", "dep:tracing-opentelemetry"]
